rnsc/test_data/integration/error/parser/method_directive/missing_method_end.rns
.class MissingMethodEnd
.super java/lang/Object

.method main ()V
  .code stack 1 locals 0
    return
  .code_end
